[gd_scene load_steps=4 format=3 uid="uid://wpurhk0uwqax"]

[ext_resource type="PackedScene" uid="uid://07s5r8vmwi6x" path="res://GameManagerTestingFolder/SaveSlot.tscn" id="1_8r2y0"]
[ext_resource type="Script" path="res://GameManagerTestingFolder/SaveSelect.gd" id="1_in4rt"]
[ext_resource type="PackedScene" uid="uid://bhr0d2o0bobp8" path="res://GameManagerTestingFolder/DestinySelect.tscn" id="3_r1gxv"]

[node name="SaveSelect" type="Node"]
script = ExtResource("1_in4rt")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="SaveSlotContainer" type="VBoxContainer" parent="UI/MC"]
layout_mode = 2

[node name="Button" type="Button" parent="UI/MC/SaveSlotContainer"]
layout_mode = 2
text = "뒤로가기"

[node name="SaveSlot" parent="UI/MC/SaveSlotContainer" instance=ExtResource("1_8r2y0")]
layout_mode = 2
saveNum = 1

[node name="SaveSlot2" parent="UI/MC/SaveSlotContainer" instance=ExtResource("1_8r2y0")]
layout_mode = 2
saveNum = 2

[node name="SaveSlot3" parent="UI/MC/SaveSlotContainer" instance=ExtResource("1_8r2y0")]
layout_mode = 2
saveNum = 3

[node name="DestinySelect" parent="UI" instance=ExtResource("3_r1gxv")]
visible = false
layout_mode = 1

[connection signal="pressed" from="UI/MC/SaveSlotContainer/Button" to="." method="cancel"]
[connection signal="continueClicked" from="UI/MC/SaveSlotContainer/SaveSlot" to="." method="continueGame"]
[connection signal="deleteClicked" from="UI/MC/SaveSlotContainer/SaveSlot" to="." method="deleteData"]
[connection signal="newGameClicked" from="UI/MC/SaveSlotContainer/SaveSlot" to="." method="newGame"]
[connection signal="continueClicked" from="UI/MC/SaveSlotContainer/SaveSlot2" to="." method="continueGame"]
[connection signal="deleteClicked" from="UI/MC/SaveSlotContainer/SaveSlot2" to="." method="deleteData"]
[connection signal="newGameClicked" from="UI/MC/SaveSlotContainer/SaveSlot2" to="." method="newGame"]
[connection signal="continueClicked" from="UI/MC/SaveSlotContainer/SaveSlot3" to="." method="continueGame"]
[connection signal="deleteClicked" from="UI/MC/SaveSlotContainer/SaveSlot3" to="." method="deleteData"]
[connection signal="newGameClicked" from="UI/MC/SaveSlotContainer/SaveSlot3" to="." method="newGame"]
[connection signal="destiny_select_cancel" from="UI/DestinySelect" to="." method="newGameCancel"]
[connection signal="destiny_selected" from="UI/DestinySelect" to="." method="newGameStart"]
